--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -304,3 +304,52 @@
 	urldate = {2018-10-10},
 	file = {Gregor Mendel (1822-1884) \:\: DNA Learning Center:C\:\\Users\\Myriam\\Zotero\\storage\\9G4W38GE\\16151-Biography-1-Gregor-Mendel-1822-1884-.html:text/html}
 }
+
+@misc{houses_pfl,
+	title = {Recently {Sold} {Homes} in {Pensacola} {FL} - 9,315 {Transactions}},
+	url = {https://www.zillow.com:443/homes/pensacola_rb/},
+	abstract = {Browse data on the 9,315 recent real estate transactions in Pensacola FL. Great for discovering comps, sales history, photos, and more.},
+	language = {en},
+	urldate = {2018-10-12},
+	journal = {Zillow},
+	author = {Inc, Zillow},
+	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\4TNG7ALE\\pensacola_rb.html:text/html}
+}
+
+@misc{houses_wdc,
+	title = {Recently {Sold} {Homes} in {Washington} {DC} - 1,757 {Transactions}},
+	url = {https://www.zillow.com:443/homes/recently_sold/Washington-DC/house_type/41568_rid/3-_beds/2-_baths/globalrelevanceex_sort/38.924961,-76.965151,38.844654,-77.11278_rect/12_zm/},
+	abstract = {Browse data on the 1,757 recent real estate transactions in Washington DC. Great for discovering comps, sales history, photos, and more.},
+	language = {en},
+	urldate = {2018-10-12},
+	journal = {Zillow},
+	author = {Inc, Zillow},
+	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\P5J4JE9H\\12_zm.html:text/html}
+}
+
+
+@misc{cov,
+	title = {Coefficient of variation},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Coefficient_of_variation&oldid=861918317},
+	abstract = {In probability theory and statistics, the coefficient of variation (CV), also known as relative standard deviation (RSD), is a standardized measure of dispersion of a probability distribution or frequency distribution. It is often expressed as a percentage, and is defined as the ratio of the standard deviation  
+	σ
+	\{{\textbackslash}displaystyle {\textbackslash} {\textbackslash}sigma \}
+	to the mean  
+	μ
+	\{{\textbackslash}displaystyle {\textbackslash} {\textbackslash}mu \}
+	(or its absolute value, 
+	{\textbar}
+	μ
+	{\textbar}
+	\{{\textbackslash}displaystyle {\textbar}{\textbackslash}mu {\textbar}\}
+	). 
+	The CV or RSD is widely used in analytical chemistry to express the precision and repeatability of an assay. It is also commonly used in fields such as engineering or physics when doing quality assurance studies and ANOVA gauge R\&R. In addition, CV is utilized by economists and investors in economic models and in determining the volatility of a security.},
+	language = {en},
+	urldate = {2018-10-12},
+	journal = {Wikipedia},
+	month = sep,
+	year = {2018},
+	note = {Page Version ID: 861918317},
+	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\KAGM6YDR\\index.html:text/html}
+}
