Started on quartiles

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -353,3 +353,18 @@
 	note = {Page Version ID: 861918317},
 	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\KAGM6YDR\\index.html:text/html}
 }
+
+@misc{cochran,
+	title = {William {Gemmell} {Cochran}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=William_Gemmell_Cochran&oldid=806501824},
+	abstract = {William Gemmell Cochran (15 July 1909 – 29 March 1980) was a prominent statistician. He was born in Scotland but spent most of his life in the United States.
+	Cochran studied mathematics at the University of Glasgow and the University of Cambridge. He worked at Rothamsted Experimental Station from 1934 to 1939, when he moved to the United States. There he helped establish several departments of statistics. His longest spell in any one university was at Harvard, which he joined in 1957 and from which he retired in 1976.},
+	language = {en},
+	urldate = {2018-10-12},
+	journal = {Wikipedia},
+	month = oct,
+	year = {2017},
+	note = {Page Version ID: 806501824},
+	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\GIH4MVWF\\index.html:text/html}
+}
